<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mSettings"
        android:title="@string/activity_name_user_panel"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/mContact"
        android:title="@string/activity_name_contact"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item
        android:id="@+id/mAbout"
        android:title="@string/activity_name_about"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item
        android:id="@+id/mLogoff"
        android:title="@string/activity_name_logoff"
        android:orderInCategory="102"
        app:showAsAction="never" />
</menu>