<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlanco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UserUpdateActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:fillViewport="true"
            android:fadeScrollbars="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/user_phone_name"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_baseline_edit_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPhone"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/user_dir_edit"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_baseline_edit_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edDir"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/user_department"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp">

                    <Spinner
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:id="@+id/spinnerDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSaveUserSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@color/colorPrincipal"
                    android:text="@string/btn_save_user_settings"
                    android:textColor="@color/colorBlanco"
                    android:layout_marginBottom="50dp"
                    android:onClick="configUserEdir"/>
            </LinearLayout>
        </ScrollView>
        <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
</RelativeLayout>