<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco"
    android:orientation="vertical"
    tools:context=".ui.ContactActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:fadeScrollbars="false"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <TableRow android:layout_marginTop="34dp">
                <TextView
                    android:id="@+id/tvMedicalEntityName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/medical_entity_name"
                    android:textColor="@color/colorSecundario"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow android:layout_marginTop="28dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/tvMedicalEntityPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/medical_entity_phone"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow android:layout_marginTop="28dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/tvMedicalEntityEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/medical_entity_email"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginTop="80dp">
                <TextView
                    android:id="@+id/tvTechSupport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/tech_support"
                    android:textColor="@color/colorSecundario"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow android:layout_marginTop="28dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/tvTechSupportEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/tech_support_email"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginTop="28dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/tvTechSupportWpp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:gravity="start"
                    android:text="@string/tech_support_wpp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>
    <include android:id="@+id/toolbar" layout="@layout/toolbar" />
</RelativeLayout>